Fix onClick Of Project Card on Mobile

--- a/src/components/timeline/timeline.module.scss
+++ b/src/components/timeline/timeline.module.scss
@@ -3,10 +3,10 @@
    --timeline-item-gap: 12rem;
    
    --timeline-line-gap: 5rem;
-   --timeline-line-width: 0.8rem;
+   --timeline-line-width: 0.6rem;
    --timeline-line-overflow: 2rem;
    
-   --timeline-circle-size: 1.6rem;
+   --timeline-circle-size: 1.4rem;
    
    @media only screen and (min-width: 700px) {
       --timeline-line-overflow: 3rem;
