--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -2,7 +2,7 @@
    display: grid;
    justify-items: center;
    row-gap: 2rem;
-   padding: 4rem 0;
+   padding: 6rem 0;
 
    &--primary {
       background-color: var(--color-primary);
